# src/api/api.module.ts
@@ -21,6 +21,7 @@ import { ProductsController } from "./controllers/catalog/products.controller";
 import { ContractsController } from "./controllers/contract/contracts.controller";
 import { FinancialController } from "./controllers/financial/financial.controller";
 import { PlacementController } from "./controllers/placement/placement.controller";
+import { PlacementQueryController } from "./controllers/placement/placement-query.controller";
 import { SessionController as UnifiedSessionController } from "./controllers/services/session.controller";
 import { ClassController } from "./controllers/services/class.controller";
 import { ClassSessionController } from "./controllers/services/class-session.controller";
@@ -83,6 +84,7 @@ import { SessionTypesController } from "./controllers/services/session-types.con
 
     // Placement Controllers
     PlacementController,
+    PlacementQueryController,
   ],
 })
 export class ApiModule {}
